added cases for pushing equals prematurely